@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam nodesep 45
skinparam ranksep 45
skinparam classFontSize 11
skinparam classAttributeFontSize 10
top to bottom direction

' ============================================================
' Design-level — Pattern Observer (GoF classico, variante Push)
' Notifica del cambio stato dell'Ordine. Niente classi evento:
' la notifica passa l'oggetto di dominio Ordine stesso.
' Fedele al codice reale (tracciabilità): OrdineSubject NON è singleton.
' ============================================================

' ---------- Controller (istanzia e registra l'osservatore) ----------
class "OrdinaProdottoController" as CTL <<control>> {
  + processaPagamento(bean, utente, payment) : OrdineBean
  + submitOrdine(bean, utente) : OrdineBean
}

' ---------- Subject concreto ----------
class "OrdineSubject" {
  - listeners : List<OrdineEventListener>
  + subscribe(OrdineEventListener) : void
  + unsubscribe(OrdineEventListener) : void
  + notifyObservers(Ordine) : void
}

' ---------- Entity (Subject host) ----------
class "Ordine" <<entity>> {
  - subject : OrdineSubject
  + subscribe(OrdineEventListener) : void
  + notificaSottomissione() : void
  + cambiaStato(StatoOrdineEnum) : void
}

' ---------- Observer astratto ----------
interface "OrdineEventListener" <<interface>> {
  + onStatoCambiato(Ordine) : void
}

' ---------- Observer concreti ----------
class "VenditoreNotifier" <<observer>> {
  + onStatoCambiato(Ordine) : void
}
class "UtenteNotifier" <<observer>> {
  + onStatoCambiato(Ordine) : void
}

' ============================================================
' Relazioni
' ============================================================
' Composizione: Ordine possiede il suo subject (rombo pieno, 1:1)
Ordine "1" *-- "1" OrdineSubject

' Realizzazione: gli observer implementano l'interfaccia
VenditoreNotifier ..|> OrdineEventListener
UtenteNotifier    ..|> OrdineEventListener

' Subject notifica i listener (aggregazione)
OrdineSubject "1" o-- "*" OrdineEventListener : listeners

' Dipendenze del controller (<<use>>)
CTL ..> Ordine : <<use>> submitOrdine
CTL ..> OrdineSubject : <<use>>\nordine.subscribe / notifica
CTL ..> VenditoreNotifier : <<use>>\nnew VenditoreNotifier()

@enduml